--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+html
 <!doctype html>
 <html>
   <head><meta charset="utf-8"><title>My Free Site</title></head>
@@ -5,4 +6,5 @@
     <h1>Hello — this is my site!</h1>
     <p>Published with GitHub Pages.</p>
   </body>
+
 </html>
