--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head><meta charset="utf-8"><title>My Free Site</title></head>
+  <head><title>Welcome</title></head>
   <body>
-    <h1>Hello — this is my site!</h1>
-    <p>Published with GitHub Pages.</p>
+    <h1>Hello from zebra492g!</h1>
+    <p>This is my GitHub Pages site.</p>
   </body>
-
 </html>
-
