--- a/index.html
+++ b/index.html
@@ -1,8 +1,36 @@
 <!DOCTYPE html>
-<html>
-  <head><title>Welcome</title></head>
-  <body>
-    <h1>Hello from zebra492g!</h1>
-    <p>This is my GitHub Pages site.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>My Vibe Site</title>
+  <style>
+    body {
+      background: linear-gradient(135deg, #89f7fe 0%, #66a6ff 100%);
+      font-family: 'Poppins', sans-serif;
+      color: white;
+      text-align: center;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 0;
+    }
+    h1 { font-size: 3em; margin-bottom: 0.3em; }
+    p { font-size: 1.2em; opacity: 0.9; }
+    a {
+      color: white;
+      text-decoration: none;
+      border: 2px solid white;
+      padding: 10px 20px;
+      border-radius: 25px;
+      transition: 0.3s;
+    }
+    a:hover { background: rgba(255,255,255,0.2); }
+  </style>
+</head>
+<body>
+  <h1>Welcome to My Vibe ✨</h1>
+  <p>Chill space, good code, good energy.</p>
+  <a href="https://github.com/yourusername">My GitHub</a>
+</body>
 </html>
