--- a/index.html
+++ b/index.html
@@ -121,6 +121,47 @@
   <footer>
     © 2025 Zebra’s Vibe — built with GitHub Pages 💫
   </footer>
+
+  
+<!-- ===== AI Travel Planner Widget ===== -->
+<div id="chat-container" style="
+  position: fixed; bottom: 20px; right: 20px;
+  width: 320px; background: rgba(255,255,255,0.9);
+  border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  font-family: 'Poppins', sans-serif; color: #333; padding: 10px;">
+  <h3 style="margin:0 0 10px;">🧭 Travel Assistant</h3>
+  <div id="chat-messages" style="max-height:250px; overflow-y:auto; font-size: 0.9em;"></div>
+  <input id="user-input" type="text" placeholder="Ask me about your trip..."
+    style="width: 100%; border:none; border-radius:10px; padding:8px; margin-top:5px;">
+</div>
+
+<script>
+  const messages = document.getElementById('chat-messages');
+  const input = document.getElementById('user-input');
+
+  input.addEventListener('keydown', async (e) => {
+    if (e.key === 'Enter' && input.value.trim() !== '') {
+      const userText = input.value.trim();
+      messages.innerHTML += `<div><b>You:</b> ${userText}</div>`;
+      input.value = '';
+
+      // Temporary fake AI response
+      messages.innerHTML += `<div><i>AI is thinking...</i></div>`;
+      messages.scrollTop = messages.scrollHeight;
+
+      // Replace this part later with actual API call
+      setTimeout(() => {
+        const fakeReply = "Here's an idea: Fly to Lisbon, explore Sintra, then enjoy Porto’s riverfront!";
+        messages.innerHTML = messages.innerHTML.replace('<i>AI is thinking...</i>', fakeReply);
+        messages.scrollTop = messages.scrollHeight;
+      }, 1200);
+    }
+  });
+</script>
+<!-- ===== end widget ===== -->
+
+
 </body>
 </html>
+
 
