--- a/index.html
+++ b/index.html
@@ -149,19 +149,68 @@
       messages.innerHTML += `<div><i>AI is thinking...</i></div>`;
       messages.scrollTop = messages.scrollHeight;
 
-      // Replace this part later with actual API call
-      setTimeout(() => {
-        const fakeReply = "Here's an idea: Fly to Lisbon, explore Sintra, then enjoy Porto’s riverfront!";
-        messages.innerHTML = messages.innerHTML.replace('<i>AI is thinking...</i>', fakeReply);
-        messages.scrollTop = messages.scrollHeight;
-      }, 1200);
+      // Replace this part later with actual API call (done on 10/15)
+     <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>AI Travel Chatbot</title>
+  <style>
+    #chat {
+      border: 1px solid #ccc;
+      padding: 1rem;
+      height: 300px;
+      overflow-y: auto;
+      margin-bottom: 1rem;
     }
-  });
-</script>
+    input { width: 70%; padding: 0.5rem; }
+    button { width: 25%; padding: 0.5rem; }
+  </style>
+</head>
+<body>
+  <h1>AI Travel Chatbot</h1>
+
+  <div id="chat"></div>
+
+  <input id="msg" placeholder="Type your message..." />
+  <button onclick="sendMessage()">Send</button>
+
+  <script>
+    async function sendMessage() {
+      const msgInput = document.getElementById("msg");
+      const userMessage = msgInput.value.trim();
+      if (!userMessage) return;
+
+      const chatDiv = document.getElementById("chat");
+      chatDiv.innerHTML += `<p><b>You:</b> ${userMessage}</p>`;
+      msgInput.value = "";
+      chatDiv.innerHTML += `<p><i>AI is typing...</i></p>`;
+
+      try {
+        const response = await fetch("/api/chat", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ message: userMessage })
+        });
+
+        const data = await response.json();
+        // Remove "AI is typing..." placeholder
+        chatDiv.innerHTML = chatDiv.innerHTML.replace("<p><i>AI is typing...</i></p>", "");
+        chatDiv.innerHTML += `<p><b>AI:</b> ${data.reply}</p>`;
+        chatDiv.scrollTop = chatDiv.scrollHeight;
+
+      } catch (error) {
+        chatDiv.innerHTML += `<p><b>Error:</b> ${error.message}</p>`;
+      }
+    }
+  </script>
+</body>
+</html>
 <!-- ===== end widget ===== -->
 
 
 </body>
 </html>
+
 
 
