--- a/index.html
+++ b/index.html
@@ -2,167 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zebra’s Vibe Site</title>
-  <style>
-    body {
-      background: linear-gradient(135deg, #a1c4fd 0%, #c2e9fb 100%);
-      font-family: 'Poppins', sans-serif;
-      color: #fff;
-      margin: 0;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    header {
-      padding: 2em 0;
-    }
-
-    h1 {
-      font-size: 3em;
-      margin: 0.2em 0;
-    }
-
-    nav a {
-      margin: 0 1em;
-      color: white;
-      text-decoration: none;
-      font-weight: 600;
-      border-bottom: 2px solid transparent;
-      transition: border-bottom 0.3s;
-    }
-
-    nav a:hover {
-      border-bottom: 2px solid white;
-    }
-
-    section {
-      width: 90%;
-      max-width: 800px;
-      margin: 2em 0;
-      background: rgba(255, 255, 255, 0.15);
-      border-radius: 20px;
-      padding: 2em;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    }
-
-    h2 {
-      font-size: 2em;
-      margin-bottom: 0.5em;
-    }
-
-    p {
-      line-height: 1.6;
-      font-size: 1.1em;
-    }
-
-    footer {
-      margin: 3em 0 1em;
-      font-size: 0.9em;
-      opacity: 0.8;
-    }
-
-    .photo-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1em;
-      margin-top: 1em;
-    }
-
-    .photo-grid img {
-      width: 100%;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-      transition: transform 0.3s;
-    }
-
-    .photo-grid img:hover {
-      transform: scale(1.03);
-    }
-  </style>
-</head>
-
-<body>
-  <header>
-    <h1>Welcome to Zebra’s Vibe ✨</h1>
-    <p>Chill space — code, travel, and good energy.</p>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#travel">Travel</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Hi! I’m Zebra — a curious mind who loves to explore tech, nature, and new ideas. This is my cozy digital space where I’ll share what inspires me.</p>
-  </section>
-
-  <section id="travel">
-    <h2>Travel 🌍</h2>
-    <p>I love capturing stories from the road — moments that remind me how big and beautiful the world is. I’ll be adding photos and travel notes here soon!</p>
-    <div class="photo-grid">
-      <!-- Add your photos later like this:
-      <img src="photos/alps.jpg" alt="Hiking in the Alps">
-      <img src="photos/kyoto.jpg" alt="Street in Kyoto">
-      -->
-      <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" alt="Placeholder beach">
-      <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470" alt="Mountains placeholder">
-    </div>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Let’s connect! You can find me on <a href="https://github.com/zebra492g" style="color:white;text-decoration:underline;">GitHub</a>.</p>
-  </section>
-
-  <footer>
-    © 2025 Zebra’s Vibe — built with GitHub Pages 💫
-  </footer>
-
-  
-<!-- ===== AI Travel Planner Widget ===== -->
-<div id="chat-container" style="
-  position: fixed; bottom: 20px; right: 20px;
-  width: 320px; background: rgba(255,255,255,0.9);
-  border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-  font-family: 'Poppins', sans-serif; color: #333; padding: 10px;">
-  <h3 style="margin:0 0 10px;">🧭 Travel Assistant</h3>
-  <div id="chat-messages" style="max-height:250px; overflow-y:auto; font-size: 0.9em;"></div>
-  <input id="user-input" type="text" placeholder="Ask me about your trip..."
-    style="width: 100%; border:none; border-radius:10px; padding:8px; margin-top:5px;">
-</div>
-
-<script>
-  const messages = document.getElementById('chat-messages');
-  const input = document.getElementById('user-input');
-
-  input.addEventListener('keydown', async (e) => {
-    if (e.key === 'Enter' && input.value.trim() !== '') {
-      const userText = input.value.trim();
-      messages.innerHTML += `<div><b>You:</b> ${userText}</div>`;
-      input.value = '';
-
-      // Temporary fake AI response
-      messages.innerHTML += `<div><i>AI is thinking...</i></div>`;
-      messages.scrollTop = messages.scrollHeight;
-
-      // Replace this part later with actual API call (done on 10/15)
-     <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
   <title>AI Travel Chatbot</title>
   <style>
-    #chat {
-      border: 1px solid #ccc;
-      padding: 1rem;
-      height: 300px;
-      overflow-y: auto;
-      margin-bottom: 1rem;
-    }
+    #chat { border: 1px solid #ccc; padding: 1rem; height: 300px; overflow-y: auto; margin-bottom: 1rem; }
     input { width: 70%; padding: 0.5rem; }
     button { width: 25%; padding: 0.5rem; }
   </style>
@@ -175,42 +17,9 @@
   <input id="msg" placeholder="Type your message..." />
   <button onclick="sendMessage()">Send</button>
 
-  <script>
-    async function sendMessage() {
-      const msgInput = document.getElementById("msg");
-      const userMessage = msgInput.value.trim();
-      if (!userMessage) return;
-
-      const chatDiv = document.getElementById("chat");
-      chatDiv.innerHTML += `<p><b>You:</b> ${userMessage}</p>`;
-      msgInput.value = "";
-      chatDiv.innerHTML += `<p><i>AI is typing...</i></p>`;
-
-      try {
-        const response = await fetch("/api/chat", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ message: userMessage })
-        });
-
-        const data = await response.json();
-        // Remove "AI is typing..." placeholder
-        chatDiv.innerHTML = chatDiv.innerHTML.replace("<p><i>AI is typing...</i></p>", "");
-        chatDiv.innerHTML += `<p><b>AI:</b> ${data.reply}</p>`;
-        chatDiv.scrollTop = chatDiv.scrollHeight;
-
-      } catch (error) {
-        chatDiv.innerHTML += `<p><b>Error:</b> ${error.message}</p>`;
-      }
-    }
-  </script>
+  <!-- Use frontend JS from public folder -->
+  <script src="/chat.js"></script>
 </body>
 </html>
-<!-- ===== end widget ===== -->
-
-
-</body>
-</html>
-
 
 
